fix text on landing page so website scales correctly on mobile devices

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -220,6 +220,15 @@ img.logo {
   }
 }
 
+header h2 {
+  color: #fff;
+  font-size: 4rem;
+}
+
+header h4 {
+  padding: 5px;
+}
+
 #btn-header {
   background-color: #F16600;
   color: #fff;
